--- a/index.html
+++ b/index.html
@@ -3,66 +3,57 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ልማት Hub | Full Mission Portal</title>
+    <title>ልማት Hub | Digital Ethiopia 2026</title>
     <style>
-        :root { --blue: #003973; --yellow: #FFD700; --bg: #f8f9fa; --white: #ffffff; }
+        :root { --blue: #003973; --yellow: #FFD700; --bg: #f4f7f6; --white: #ffffff; --green: #28a745; }
         * { box-sizing: border-box; margin: 0; padding: 0; font-family: 'Segoe UI', Arial, sans-serif; }
         body { background: var(--bg); color: #333; line-height: 1.6; }
 
-        /* ANNOUNCEMENT BAR */
-        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.9rem; position: sticky; top: 0; z-index: 2000; box-shadow: 0 2px 5px rgba(0,0,0,0.1); }
+        /* TOP ANNOUNCEMENT */
+        .ticker { background: var(--yellow); color: var(--blue); padding: 12px; font-weight: bold; text-align: center; font-size: 0.9rem; position: sticky; top: 0; z-index: 2000; border-bottom: 2px solid var(--blue); }
         
         /* NAVIGATION */
         nav { display: flex; justify-content: space-between; align-items: center; padding: 15px 8%; background: white; border-bottom: 1px solid #ddd; position: sticky; top: 43px; z-index: 1000; }
         .logo { font-size: 26px; font-weight: bold; color: var(--blue); text-decoration: none; }
-        .nav-right { display: flex; gap: 20px; align-items: center; }
-        .lang-select { padding: 8px 12px; border-radius: 5px; border: 1px solid #ccc; font-weight: bold; cursor: pointer; background: #fff; }
-        .join-btn { background: var(--yellow); color: var(--blue); padding: 12px 25px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; box-shadow: 3px 3px 0px var(--blue); }
+        .nav-right { display: flex; gap: 15px; align-items: center; }
+        .lang-select { padding: 8px 12px; border-radius: 5px; border: 1px solid #ccc; font-weight: bold; cursor: pointer; }
+        .join-btn { background: var(--yellow); color: var(--blue); padding: 10px 22px; border-radius: 50px; font-weight: bold; border: 2px solid var(--blue); text-decoration: none; }
 
-        .container { max-width: 1200px; margin: 0 auto; padding: 60px 5%; }
+        .container { max-width: 1100px; margin: 0 auto; padding: 40px 5%; }
 
-        /* LARGE HERO PORTAL */
-        .hero { background: var(--blue); color: white; padding: 100px 40px; border-radius: 30px; text-align: center; border: 5px solid var(--yellow); margin-bottom: 80px; box-shadow: 0 20px 40px rgba(0,57,115,0.2); }
-        .hero h1 { font-size: 3rem; margin-bottom: 10px; }
-        .hero p { font-size: 1.2rem; opacity: 0.9; margin-bottom: 30px; }
-        .id-input { width: 100%; max-width: 500px; padding: 20px; border-radius: 12px; border: none; font-size: 1.2rem; text-align: center; margin-bottom: 20px; color: #111; }
-        .v-btn { background: var(--yellow); color: var(--blue); padding: 20px 60px; border: none; border-radius: 12px; font-weight: 900; cursor: pointer; text-transform: uppercase; font-size: 1.1rem; }
+        /* LOGIN PORTAL */
+        .hero { background: var(--blue); color: white; padding: 60px 20px; border-radius: 20px; text-align: center; border: 4px solid var(--yellow); margin-bottom: 40px; box-shadow: 0 10px 30px rgba(0,0,0,0.1); }
+        .id-input { width: 90%; max-width: 450px; padding: 18px; margin: 20px 0; border-radius: 8px; border: none; font-size: 1.1rem; text-align: center; }
+        .v-btn { background: var(--yellow); color: var(--blue); padding: 18px 50px; border: none; border-radius: 8px; font-weight: 800; cursor: pointer; text-transform: uppercase; }
 
-        /* STUDENT DASHBOARD PREVIEW */
-        .dash-row { display: grid; grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); gap: 30px; margin-bottom: 80px; }
-        .dash-card { background: white; padding: 40px; border-radius: 20px; border-left: 8px solid var(--blue); box-shadow: 0 10px 30px rgba(0,0,0,0.05); }
-        .badge { background: #28a745; color: white; padding: 5px 12px; border-radius: 5px; font-size: 0.75rem; font-weight: bold; margin-bottom: 15px; display: inline-block; }
+        /* DASHBOARD OPTIONS (NOW VISIBLE) */
+        .dash-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(280px, 1fr)); gap: 20px; margin-bottom: 50px; }
+        .dash-card { background: white; padding: 25px; border-radius: 12px; border-left: 6px solid var(--blue); text-align: left; box-shadow: 0 4px 10px rgba(0,0,0,0.05); }
+        .live-tag { background: var(--green); color: white; padding: 3px 8px; border-radius: 4px; font-size: 0.7rem; font-weight: bold; margin-bottom: 10px; display: inline-block; }
 
-        /* TRACKS SECTION */
-        .section-header { text-align: left; margin-bottom: 40px; border-left: 8px solid var(--yellow); padding-left: 20px; }
-        .section-header h2 { font-size: 2.2rem; color: var(--blue); }
-        
-        .tracks-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(220px, 1fr)); gap: 25px; margin-bottom: 100px; }
-        .track-item { background: white; padding: 35px 25px; border-radius: 20px; border: 1px solid #eee; border-top: 6px solid var(--blue); transition: 0.3s; }
-        .track-item:hover { transform: translateY(-10px); border-top-color: var(--yellow); box-shadow: 0 15px 30px rgba(0,0,0,0.1); }
-        .track-item b { font-size: 1.3rem; color: var(--blue); display: block; margin-bottom: 10px; }
+        /* TRACKS & FAQ */
+        .section-h { color: var(--blue); margin-bottom: 25px; border-left: 6px solid var(--yellow); padding-left: 15px; text-align: left; }
+        .grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 20px; margin-bottom: 60px; }
+        .track { background: white; padding: 25px; border-radius: 15px; border-top: 5px solid var(--blue); text-align: left; border: 1px solid #eee; }
+        .track b { display: block; margin-bottom: 5px; color: var(--blue); font-size: 1.1rem; }
 
-        /* FAQ */
-        .faq-section { background: white; padding: 60px; border-radius: 30px; border: 1px solid #ddd; margin-bottom: 100px; }
-        .faq-q { margin-bottom: 40px; padding-bottom: 20px; border-bottom: 1px solid #eee; }
-        .faq-q h3 { color: var(--blue); margin-bottom: 15px; font-size: 1.4rem; }
+        .faq-box { background: white; padding: 40px; border-radius: 20px; text-align: left; border: 1px solid #ddd; margin-bottom: 60px; }
+        .faq-item { margin-bottom: 25px; border-bottom: 1px solid #eee; padding-bottom: 15px; }
 
         /* FOOTER */
-        footer { background: #0a0a0a; color: #fff; padding: 100px 8% 50px; border-top: 8px solid var(--yellow); }
-        .footer-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); gap: 60px; }
-        .footer-col h4 { color: var(--yellow); margin-bottom: 30px; text-transform: uppercase; letter-spacing: 2px; }
-        .footer-col p { color: #999; margin-bottom: 15px; font-size: 0.95rem; }
-        .footer-bottom { border-top: 1px solid #222; margin-top: 60px; padding-top: 40px; text-align: center; color: #555; font-size: 0.85rem; }
+        footer { background: #111; color: white; padding: 60px 8% 30px; border-top: 5px solid var(--yellow); }
+        .f-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr)); gap: 40px; }
+        .f-bottom { border-top: 1px solid #333; margin-top: 40px; padding-top: 20px; text-align: center; color: #666; font-size: 0.8rem; }
     </style>
 </head>
 <body>
 
-<div class="ticker" id="tk">ENROLLMENT OPEN: DIGITAL ETHIOPIA 2026 STRATEGY • VERIFIED BY FAYDA ID</div>
+<div class="ticker" id="tk">MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA ID</div>
 
 <nav>
     <a href="#" class="logo">ልማት Hub</a>
     <div class="nav-right">
-        <select class="lang-select" onchange="translatePage(this.value)">
+        <select class="lang-select" onchange="upd(this.value)">
             <option value="en">English</option>
             <option value="am">አማርኛ</option>
             <option value="om">Afaan Oromoo</option>
@@ -80,119 +71,97 @@
         <button class="v-btn" id="vb">VERIFY & ENTER</button>
     </div>
 
-    <div class="dash-row">
+    <h2 class="section-h" id="dh">Student Dashboard Options</h2>
+    <div class="dash-grid">
         <div class="dash-card">
-            <span class="badge" id="b1">LIVE STATUS</span>
-            <h4 id="o1">Learning Streak</h4>
-            <p id="o1s">0 Days (Enter ID to begin mission)</p>
+            <span class="live-tag">LIVE</span>
+            <b id="o1">Learning Streak</b>
+            <p id="o1s">0 Days (Verify ID to track)</p>
         </div>
         <div class="dash-card">
-            <span class="badge" id="b2" style="background:var(--blue)">OFFICIAL</span>
-            <h4 id="o2">Certifications</h4>
-            <p id="o2s">Locked until Fayda ID is verified</p>
+            <b id="o2">Digital Certificates</b>
+            <p id="o2s">Official 2026 Certification</p>
+        </div>
+        <div class="dash-card">
+            <b id="o3">Verification Status</b>
+            <p id="o3s">Pending Fayda Verification</p>
         </div>
     </div>
 
-    <div class="section-header">
-        <h2 id="th">Official Specializations (10 Tracks)</h2>
-    </div>
-    <div class="tracks-grid" id="track-list">
-        </div>
+    <h2 class="section-h" id="th">Specializations (10 Tracks)</h2>
+    <div class="grid" id="tl"></div>
 
-    <div class="faq-section">
-        <div class="section-header"><h2 id="fh">Frequently Asked Questions</h2></div>
-        <div id="faq-list"></div>
+    <div class="faq-box">
+        <h2 class="section-h" id="fh">Frequently Asked Questions</h2>
+        <div id="fl"></div>
     </div>
 </div>
 
 <footer>
-    <div class="footer-grid">
-        <div class="footer-col">
-            <h4>ልማት Hub</h4>
-            <p id="fa">Building the tech workforce of 2026. Empowering every citizen through digital literacy and advanced AI engineering.</p>
-        </div>
-        <div class="footer-col">
-            <h4 id="flk">Mission Resources</h4>
-            <p>Strategy 2026 Documentation</p>
-            <p>Fayda ID Integration Guide</p>
-            <p>Curriculum Overview</p>
-        </div>
-        <div class="footer-col">
-            <h4 id="fc">Headquarters</h4>
-            <p>Addis Ababa, Ethiopia</p>
-            <p>Email: contact@lemathub.et</p>
-            <p>Support: +251 900 000 000</p>
-        </div>
+    <div class="f-grid">
+        <div><h4>ልማት Hub</h4><p id="fa">Building the tech workforce of 2026.</p></div>
+        <div><h4 id="flk">Resources</h4><p>Mission Strategy</p><p>ID Integration</p></div>
+        <div><h4 id="fc">Contact</h4><p>Addis Ababa, Ethiopia</p></div>
     </div>
-    <div class="footer-bottom">
-        <p>© 2026 ልማት Hub | Official Fayda National ID Partner</p>
-        <p style="margin-top:10px; opacity:0.6;">Empowering Ethiopia's Digital Transformation</p>
+    <div class="f-bottom">
+        <p>© 2026 ልማት Hub | Official Fayda Partner</p>
     </div>
 </footer>
 
 <script>
-    const translations = {
+    const data = {
         en: {
             tk: "MISSION 2026: ENROLLMENT OPEN • VERIFIED BY FAYDA ID", jb: "JOIN NOW",
             ht: "Ethiopia's 2026 Digital Mission", hs: "National ID Verification Portal",
-            id: "Enter Fayda ID to access dashboard", vb: "VERIFY & ENTER",
-            o1: "Learning Streak", o1s: "0 Days (Enter ID to begin)",
-            o2: "Certifications", o2s: "Locked until ID Verification",
-            th: "Official Specializations (10 Tracks)", fh: "Frequently Asked Questions",
-            fa: "Building the tech workforce of 2026 for a digital Ethiopia.",
+            id: "Enter Fayda ID to access dashboard", vb: "VERIFY & ENTER", dh: "Student Dashboard Options",
+            o1: "Learning Streak", o1s: "0 Days (Verify ID to track)",
+            o2: "Certificates", o2s: "Official 2026 Certification",
+            o3: "Status", o3s: "Pending Verification",
+            th: "Specializations (10 Tracks)", fh: "Frequently Asked Questions", fa: "Building the tech workforce of 2026.",
             tr: ["AI Engineering", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"],
-            faq: [
-                {q: "Is this program free?", a: "Yes, all mission tracks are fully funded for verified citizens."},
-                {q: "Is Fayda ID mandatory?", a: "Yes, all certifications are legally linked to your National ID."}
-            ]
+            faq: [{q: "Is this free?", a: "Yes, all tracks are funded."}, {q: "Is ID required?", a: "Yes, Fayda ID is mandatory."}]
         },
         am: {
             tk: "ተልዕኮ 2026፡ ምዝገባ ተከፍቷል • በፋይዳ መታወቂያ የተረጋገጠ", jb: "አሁን ይቀላቀሉ",
             ht: "የኢትዮጵያ 2026 ዲጂታል ተልዕኮ", hs: "የብሔራዊ መታወቂያ ማረጋገጫ ፖርታል",
-            id: "ዳሽቦርድ ለመድረስ የፋይዳ መታወቂያ ያስገቡ", vb: "አረጋግጥ እና ግባ",
-            o1: "የትምህርት ሂደት", o1s: "0 ቀናት (ለመጀመር መታወቂያ ያስገቡ)",
-            o2: "የምስክር ወረቀቶች", o2s: "በመታወቂያ የተቆለፈ",
-            th: "ኦፊሴላዊ የሥልጠና ዘርፎች (10 ትራኮች)", fh: "ተደጋጋሚ ጥያቄዎች",
-            fa: "ለዲጂታል ኢትዮጵያ የ2026 የቴክኖሎጂ የሰው ኃይል መገንባት።",
+            id: "ዳሽቦርድ ለመድረስ የፋይዳ መታወቂያ ያስገቡ", vb: "አረጋግጥ እና ግባ", dh: "የተማሪ ዳሽቦርድ አማራጮች",
+            o1: "የትምህርት ሂደት", o1s: "0 ቀናት (ለመከታተል መታወቂያ ያረጋግጡ)",
+            o2: "የምስክር ወረቀቶች", o2s: "ኦፊሴላዊ የ2026 የምስክር ወረቀት",
+            o3: "ሁኔታ", o3s: "ማረጋገጫ በመጠባበቅ ላይ",
+            th: "የሥልጠና ዘርፎች (10 ትራኮች)", fh: "ተደጋጋሚ ጥያቄዎች", fa: "የ2026 የቴክኖሎጂ የሰው ኃይል መገንባት።",
             tr: ["አርቴፊሻል ኢንተለጀንስ", "የሳይበር ደህንነት", "ሙሉ የድር ልማት", "የመረጃ ሳይንስ", "ክላውድ ዴቭኦፕስ", "የሞባይል መተግበሪያ", "ብሎክቼይን", "ዩአይ/ዩኤክስ ዲዛይን", "አይኦቲ ሲስተምስ", "ፊንቴክ"],
-            faq: [
-                {q: "ይህ ፕሮግራም ነፃ ነው?", a: "አዎ፣ ሁሉም የ2026 ተልዕኮ ትራኮች ለተረጋገጡ ዜጎች በነፃ የቀረቡ ናቸው።"},
-                {q: "መታወቂያ ያስፈልጋል?", a: "አዎ፣ ለብሔራዊ የምስክር ወረቀት ትክክለኛ የፋይዳ መታወቂያ ግዴታ ነው።"}
-            ]
+            faq: [{q: "ነፃ ነው?", a: "አዎ፣ ሁሉም ትራኮች በነፃ ናቸው።"}, {q: "መታወቂያ ያስፈልጋል?", a: "አዎ፣ የፋይዳ መታወቂያ ግዴታ ነው።"}]
         },
         om: {
             tk: "ERGA 2026: GALMEEN BANAMEERA • FAYDA ID'N MIRKANAAYE", jb: "AMMA SEENI",
             ht: "Ergaa Diigitalaa Itoophiyaa 2026", hs: "Waraqaa Eenyummaa Mirkaneessuuf",
-            id: "Koodii Fayda galchaa", vb: "MIRKANEESSI & SEENI",
-            o1: "Adeemsa Leenjii", o1s: "Guyyaa 0 (ID Galchaa)",
-            o2: "Waraqaa Ragaa", o2s: "Fayda ID'n cufameera",
-            th: "Leenjiiwwan Ofisiyawaa (10)", fh: "Gaaffiiwwan Yeroo Baay'ee Gaafataman",
-            fa: "Humni namaa teeknooloojii 2026 Itoophiyaa diigitalaaf ijaaruuf.",
+            id: "Koodii Fayda galchaa", vb: "MIRKANEESSI & SEENI", dh: "Filannoowwan Daashboordii Barataa",
+            o1: "Adeemsa Leenjii", o1s: "Guyyaa 0 (ID Mirkaneessi)",
+            o2: "Waraqaa Ragaa", o2s: "Waraqaa Ragaa Ofisiyawaa 2026",
+            o3: "Haala", o3s: "Mirkaneessa Eegaa Jira",
+            th: "Leenjiiwwan (Track 10)", fh: "Gaaffiiwwan Yeroo Baay'ee Gaafataman", fa: "Humni namaa teeknooloojii 2026 ijaaruuf.",
             tr: ["AI Injiinariingii", "Cyber Security", "Full-Stack Web", "Data Science", "Cloud DevOps", "Mobile Dev", "Blockchain", "UI/UX Design", "IoT Systems", "Fintech"],
-            faq: [
-                {q: "Leenjiin kun bilisaa?", a: "Eeyyee, track'n hundi lammilee mirkanaa'aniif kaffalameera።"},
-                {q: "Fayda ID'n ni barbaachisaa?", a: "Eeyyee, waraqaa ragaa argachuuf Fayda ID'n dirqama።"}
-            ]
+            faq: [{q: "Bilisaa?", a: "Eeyyee, track hundi bilisa።"}, {q: "ID'n ni barbaachisaa?", a: "Eeyyee, Fayda ID'n dirqama።"}]
         }
     };
 
-    function translatePage(l) {
-        const c = translations[l];
+    function upd(l) {
+        const c = data[l];
         document.getElementById('tk').innerText = c.tk; document.getElementById('jb').innerText = c.jb;
         document.getElementById('ht').innerText = c.ht; document.getElementById('hs').innerText = c.hs;
         document.getElementById('id-pl').placeholder = c.id; document.getElementById('vb').innerText = c.vb;
+        document.getElementById('dh').innerText = c.dh;
         document.getElementById('o1').innerText = c.o1; document.getElementById('o1s').innerText = c.o1s;
         document.getElementById('o2').innerText = c.o2; document.getElementById('o2s').innerText = c.o2s;
+        document.getElementById('o3').innerText = c.o3; document.getElementById('o3s').innerText = c.o3s;
         document.getElementById('th').innerText = c.th; document.getElementById('fh').innerText = c.fh;
         document.getElementById('fa').innerText = c.fa;
-
-        const g = document.getElementById('track-list'); g.innerHTML = "";
-        c.tr.forEach(t => { g.innerHTML += `<div class="track-item"><b>${t}</b><p>Specialized Mission Track</p></div>`; });
-
-        const f = document.getElementById('faq-list'); f.innerHTML = "";
-        c.faq.forEach(q => { f.innerHTML += `<div class="faq-q"><h3>${q.q}</h3><p>${q.a}</p></div>`; });
+        const g = document.getElementById('tl'); g.innerHTML = "";
+        c.tr.forEach(t => { g.innerHTML += `<div class="track"><b>${t}</b><small>Specialization</small></div>`; });
+        const fl = document.getElementById('fl'); fl.innerHTML = "";
+        c.faq.forEach(q => { fl.innerHTML += `<div class="faq-item"><h3>${q.q}</h3><p>${q.a}</p></div>`; });
     }
-    translatePage('en');
+    upd('en');
 </script>
 </body>
 </html>
